--- a/TrumpLibs/Base.lproj/Main.storyboard
+++ b/TrumpLibs/Base.lproj/Main.storyboard
@@ -1,24 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Avc-Xg-hkp">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Welcome Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomeController" customModule="TrumpLibs" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TrumpLibs" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yz1-db-wPm">
+                                <rect key="frame" x="19.5" y="50" width="281.5" height="70"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="60"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bird-trump" translatesAutoresizingMaskIntoConstraints="NO" id="Zpf-LK-ffg">
+                                <rect key="frame" x="79" y="136" width="162" height="162"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="162" id="N6r-pr-CSx"/>
+                                    <constraint firstAttribute="height" constant="162" id="g3X-tH-Y3j"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Can you tweet crazier than the president?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RFD-u4-0D7">
+                                <rect key="frame" x="22" y="306" width="276" height="98"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="98" id="N4Y-P2-zDy"/>
+                                    <constraint firstAttribute="width" constant="276" id="m1D-59-0uO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wCc-kF-Gl1">
+                                <rect key="frame" x="2.5" y="490" width="315" height="60"/>
+                                <color key="backgroundColor" red="0.92156862750000001" green="0.63529411759999999" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="315" id="28M-08-ERZ"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="58" id="Aj0-LB-Ym4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                <state key="normal" title="Play"/>
+                                <connections>
+                                    <action selector="onPressPlay:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gJz-q2-6m9"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.50980392159999999" green="0.72941176470000002" blue="0.68627450980000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Yz1-db-wPm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="2tm-Ut-eHt"/>
+                            <constraint firstItem="RFD-u4-0D7" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="6lq-GU-diq"/>
+                            <constraint firstItem="RFD-u4-0D7" firstAttribute="top" secondItem="Zpf-LK-ffg" secondAttribute="bottom" constant="8" id="BES-XL-Hf3"/>
+                            <constraint firstItem="wCc-kF-Gl1" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Do4-Uv-uQT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wCc-kF-Gl1" secondAttribute="bottom" constant="20" id="KQo-Fm-42Z"/>
+                            <constraint firstItem="Yz1-db-wPm" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="S5c-De-Ysx"/>
+                            <constraint firstItem="wCc-kF-Gl1" firstAttribute="top" relation="greaterThanOrEqual" secondItem="RFD-u4-0D7" secondAttribute="bottom" constant="10" id="UQb-SM-kUV"/>
+                            <constraint firstItem="Zpf-LK-ffg" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="qYm-HT-DQa"/>
+                            <constraint firstItem="Zpf-LK-ffg" firstAttribute="top" secondItem="Yz1-db-wPm" secondAttribute="bottom" constant="16" id="vTu-fD-blr"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="ltK-r6-cOl"/>
+                    <connections>
+                        <outlet property="Button" destination="wCc-kF-Gl1" id="Hhf-71-ckC"/>
+                        <outlet property="header" destination="Yz1-db-wPm" id="foR-Hq-Z3V"/>
+                        <outlet property="subtitle" destination="RFD-u4-0D7" id="WCk-Ng-jLY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="982.5" y="29.577464788732396"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="lYo-q7-z3U">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="Avc-Xg-hkp" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" userInteractionEnabled="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Sjb-sG-UM6">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="lVp-eC-NaJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="G49-EO-qyz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="76.811594202898561" y="30.978260869565219"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bird-trump" width="300" height="300"/>
+    </resources>
 </document>
